--- a/index.html
+++ b/index.html
@@ -12,22 +12,27 @@
       background: linear-gradient(to right, #ffecd2, #fcb69f);
       color: #4b2e2e;
       text-align: center;
-      overflow: hidden;
+      overflow-x: hidden;
+      overflow-y: auto;
+      min-height: 100vh;
     }
     .container {
-      margin-top: 5%;
+      margin: 5% auto;
+      padding: 20px;
+      max-width: 600px;
     }
     h1 {
-      font-size: 3em;
+      font-size: 2.5em;
       animation: fadeIn 2s ease-in-out;
     }
     p {
-      font-size: 1.5em;
+      font-size: 1.3em;
       margin-top: 1em;
       animation: fadeIn 3s ease-in-out;
     }
     img {
-      width: 250px;
+      width: 100%;
+      max-width: 250px;
       height: auto;
       border-radius: 20px;
       margin-top: 20px;
