--- a/index.html
+++ b/index.html
@@ -9,27 +9,31 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #ffecd2, #fcb69f);
+      background: linear-gradient(to right, #fffbd5, #fefcea); /* soft yellow shades */
       color: #4b2e2e;
       text-align: center;
       overflow-x: hidden;
       overflow-y: auto;
       min-height: 100vh;
     }
+
     .container {
       margin: 5% auto;
       padding: 20px;
       max-width: 600px;
     }
+
     h1 {
       font-size: 2.5em;
       animation: fadeIn 2s ease-in-out;
     }
+
     p {
       font-size: 1.3em;
       margin-top: 1em;
       animation: fadeIn 3s ease-in-out;
     }
+
     img {
       width: 100%;
       max-width: 250px;
@@ -39,35 +43,41 @@
       box-shadow: 0 4px 8px rgba(0,0,0,0.3);
       animation: fadeIn 2.5s ease-in-out;
     }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-20px); }
       to { opacity: 1; transform: translateY(0); }
     }
+
     .heart {
       color: red;
       font-size: 2em;
       animation: pulse 1s infinite;
     }
+
     @keyframes pulse {
       0% { transform: scale(1); }
       50% { transform: scale(1.2); }
       100% { transform: scale(1); }
     }
+
     button {
       margin-top: 20px;
       padding: 10px 20px;
       font-size: 1em;
       border: none;
       border-radius: 10px;
-      background-color: #ff8fa3;
+      background-color: #ffc107;
       color: white;
       cursor: pointer;
       box-shadow: 0 4px 6px rgba(0,0,0,0.2);
       transition: background-color 0.3s;
     }
+
     button:hover {
-      background-color: #ff4e6a;
+      background-color: #ff9800;
     }
+
     canvas {
       position: fixed;
       top: 0;
@@ -79,11 +89,10 @@
 </head>
 <body>
   <canvas id="confetti"></canvas>
+  <canvas id="sparkles"></canvas>
 
-  <!-- Background Music (autoplay, loop, hidden player) -->
+  <!-- Background Music (autoplay, loop) -->
   <audio id="bgm" src="bgm.mp3" autoplay loop></audio>
-
-  <!-- Voice Message -->
   <audio id="message" src="message.mp3"></audio>
 
   <div class="container">
@@ -101,7 +110,7 @@
     const message = document.getElementById('message');
 
     function playMessage() {
-      if (!message.paused) return; // prevent double-click
+      if (!message.paused) return;
       bgm.pause();
       message.play();
     }
@@ -110,17 +119,17 @@
       bgm.play();
     });
 
-    // Simple Confetti
-    const canvas = document.getElementById('confetti');
-    const ctx = canvas.getContext('2d');
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
+    // Confetti (lighter)
+    const confettiCanvas = document.getElementById('confetti');
+    const ctx = confettiCanvas.getContext('2d');
+    confettiCanvas.width = window.innerWidth;
+    confettiCanvas.height = window.innerHeight;
     const confetti = [];
 
-    for (let i = 0; i < 300; i++) {
+    for (let i = 0; i < 100; i++) {  // Reduced from 300 to 100
       confetti.push({
-        x: Math.random() * canvas.width,
-        y: Math.random() * canvas.height,
+        x: Math.random() * confettiCanvas.width,
+        y: Math.random() * confettiCanvas.height,
         r: Math.random() * 6 + 4,
         d: Math.random() * 5 + 2,
         color: `hsl(${Math.random() * 360}, 100%, 70%)`,
@@ -131,7 +140,7 @@
     }
 
     function drawConfetti() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.clearRect(0, 0, confettiCanvas.width, confettiCanvas.height);
       confetti.forEach((c) => {
         ctx.beginPath();
         ctx.lineWidth = c.r;
@@ -148,9 +157,9 @@
         c.tiltAngle += c.tiltAngleIncremental;
         c.y += (Math.cos(c.d) + 3 + c.r / 2) / 2;
         c.tilt = Math.sin(c.tiltAngle) * 15;
-        if (c.y > canvas.height) {
+        if (c.y > confettiCanvas.height) {
           c.y = -10;
-          c.x = Math.random() * canvas.width;
+          c.x = Math.random() * confettiCanvas.width;
         }
       });
     }
@@ -161,6 +170,51 @@
     }
 
     animateConfetti();
+
+    // Sparkles ✨
+    const sparkleCanvas = document.getElementById('sparkles');
+    const sparkleCtx = sparkleCanvas.getContext('2d');
+    sparkleCanvas.width = window.innerWidth;
+    sparkleCanvas.height = window.innerHeight;
+
+    const sparkles = Array.from({ length: 60 }, () => ({
+      x: Math.random() * sparkleCanvas.width,
+      y: Math.random() * sparkleCanvas.height,
+      r: Math.random() * 1.5 + 0.5,
+      alpha: Math.random(),
+      speed: Math.random() * 0.5 + 0.2
+    }));
+
+    function drawSparkles() {
+      sparkleCtx.clearRect(0, 0, sparkleCanvas.width, sparkleCanvas.height);
+      sparkles.forEach(s => {
+        sparkleCtx.beginPath();
+        sparkleCtx.arc(s.x, s.y, s.r, 0, Math.PI * 2);
+        sparkleCtx.fillStyle = `rgba(255, 255, 255, ${s.alpha})`;
+        sparkleCtx.fill();
+      });
+    }
+
+    function updateSparkles() {
+      sparkles.forEach(s => {
+        s.alpha += (Math.random() - 0.5) * 0.05;
+        if (s.alpha < 0.1) s.alpha = 0.1;
+        if (s.alpha > 1) s.alpha = 1;
+        s.y -= s.speed;
+        if (s.y < 0) {
+          s.y = sparkleCanvas.height;
+          s.x = Math.random() * sparkleCanvas.width;
+        }
+      });
+    }
+
+    function animateSparkles() {
+      drawSparkles();
+      updateSparkles();
+      requestAnimationFrame(animateSparkles);
+    }
+
+    animateSparkles();
   </script>
 </body>
 </html>
