--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           tilt: Math.random() * 10 - 10,
           tiltAngleIncremental: Math.random() * 0.07 + 0.05,
           tiltAngle: 0,
-          speed: Math.random() * 300 + 200 // MUCH faster speed (200 - 500 px/s)
+          speed: 65 + (Math.random() * 10 - 5)  // speed between 60 and 70 px/s
         });
       }
     }
