--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     .container {
       padding-top: 5vh;
       padding-bottom: 10vh;
+      position: relative;
     }
 
     h1 {
@@ -27,9 +28,11 @@
     }
 
     p {
-      font-size: 1.5em;
-      margin-top: 1em;
+      font-size: 1.3em;
+      margin: 1em auto;
+      max-width: 90%;
       animation: fadeIn 3s ease-in-out;
+      line-height: 1.5em;
     }
 
     .image-wrapper {
@@ -63,39 +66,22 @@
       z-index: 10;
     }
 
-    .arrow.left {
-      left: -12%;
-    }
-
-    .arrow.right {
-      right: -12%;
-    }
+    .arrow.left { left: -12%; }
+    .arrow.right { right: -12%; }
 
     @media (max-width: 600px) {
-      .arrow.left {
-        left: -8vw;
-      }
-      .arrow.right {
-        right: -8vw;
-      }
-
-      #carousel-image {
-        max-width: 85vw;
-      }
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
+      .arrow.left { left: -8vw; }
+      .arrow.right { right: -8vw; }
+      #carousel-image { max-width: 85vw; }
     }
 
     button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 1em;
+      margin-top: 25px;
+      padding: 12px 25px;
+      font-size: 1.1em;
       border: none;
-      border-radius: 10px;
-      background-color: #ff8fa3;
+      border-radius: 12px;
+      background-color: #e63946; /* Beautiful red */
       color: white;
       cursor: pointer;
       box-shadow: 0 4px 6px rgba(0,0,0,0.2);
@@ -103,7 +89,7 @@
     }
 
     button:hover {
-      background-color: #ff4e6a;
+      background-color: #ba1b1d;
     }
 
     #confettiBtn {
@@ -128,6 +114,33 @@
       pointer-events: none;
       z-index: 9999;
     }
+
+    /* Floating hearts */
+    .heart {
+      position: fixed;
+      bottom: -30px;
+      font-size: 20px;
+      color: red;
+      animation: floatUp 6s linear infinite;
+      pointer-events: none;
+      z-index: 5;
+    }
+
+    @keyframes floatUp {
+      0% {
+        transform: translateY(0) scale(1);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-100vh) scale(1.8);
+        opacity: 0;
+      }
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
   </style>
 </head>
 <body>
@@ -135,17 +148,18 @@
 
   <div class="container">
     <h1>Happy Birthday Amma 🎉</h1>
+
     <div class="image-wrapper">
       <div class="arrow left" onclick="changeImage(-1)">❮</div>
       <img id="carousel-image" src="amma.jpg" alt="My Amma">
       <div class="arrow right" onclick="changeImage(1)">❯</div>
     </div>
+
     <p>
-      You are my light, my support, and my everything.<br>
-      This day is yours and you deserve all the happiness!<br>
-      <span class="heart">❤️</span>
+      Happy Birthday to the most incredible woman I’ve ever known. On this special day, I just want to tell you how deeply grateful I am to be your child. You’ve been my first friend, my forever teacher, and my greatest support—even when I didn’t know I needed it.
     </p>
-    <button onclick="playMessage()">Play Voice Message</button>
+
+    <button onclick="playMessage()">Play Me</button>
   </div>
 
   <button id="confettiBtn" onclick="triggerConfetti()">🎊</button>
@@ -154,7 +168,6 @@
   <audio id="message" src="message.mp3"></audio>
 
   <script>
-    // Background music & message
     const bgm = document.getElementById('bgm');
     const message = document.getElementById('message');
 
@@ -175,7 +188,6 @@
     function changeImage(direction) {
       const img = document.getElementById("carousel-image");
       img.style.opacity = 0;
-
       setTimeout(() => {
         currentIndex = (currentIndex + direction + imageList.length) % imageList.length;
         img.src = imageList[currentIndex];
@@ -183,7 +195,7 @@
       }, 300);
     }
 
-    // Confetti setup
+    // Confetti
     const canvas = document.getElementById('confetti');
     const ctx = canvas.getContext('2d');
     function resizeCanvas() {
@@ -207,7 +219,7 @@
           tilt: Math.random() * 10 - 10,
           tiltAngleIncremental: Math.random() * 0.07 + 0.05,
           tiltAngle: 0,
-          speed: Math.random() * 130 + 80  // slower speed: 80–210 px/s
+          speed: Math.random() * 130 + 80
         });
       }
     }
@@ -250,6 +262,22 @@
       confettiRunning = true;
       animateConfetti();
     }
+
+    // Floating hearts (less)
+    function spawnHeart() {
+      const heart = document.createElement("div");
+      heart.className = "heart";
+      heart.innerText = "❤️";
+      heart.style.left = Math.random() * 100 + "vw";
+      heart.style.fontSize = Math.random() * 15 + 15 + "px";
+      document.body.appendChild(heart);
+
+      setTimeout(() => heart.remove(), 6000);
+    }
+
+    setInterval(() => {
+      if (Math.random() < 0.4) spawnHeart(); // control density
+    }, 600);
   </script>
 </body>
 </html>
