--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </div>
 
     <p>
-      Happy Birthday to the most incredible woman I’ve ever known. On this special day, I just want to tell you how deeply grateful I am to be your child. You’ve been my first friend, my forever teacher, and my greatest support—even when I didn’t know I needed it.
+      Happy Birthday to the most incredible woman I’ve ever known. On this special day, I just want to tell you how deeply grateful I am to be your child. You’ve been my first friend, my forever teacher, and my greatest support—even when I didn’t know I needed it.No words will ever truly capture how much you mean to me, but I hope today brings you a piece of the happiness you’ve given me every single day of my life.
     </p>
 
     <button onclick="playMessage()">Play Me</button>
