--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
       border-radius: 20px;
       margin-top: 20px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-      transition: opacity 0.4s ease;
+      transition: opacity 0.6s ease;
+      opacity: 1;
+    }
+
+    .fade-out {
+      opacity: 0 !important;
     }
 
     .arrow {
@@ -141,6 +146,24 @@
       from { opacity: 0; transform: translateY(-20px); }
       to { opacity: 1; transform: translateY(0); }
     }
+
+    /* Sparkles */
+    .sparkle {
+      position: fixed;
+      width: 8px;
+      height: 8px;
+      background: radial-gradient(white, transparent);
+      border-radius: 50%;
+      opacity: 0.8;
+      pointer-events: none;
+      animation: sparkleFade 2s linear forwards;
+      z-index: 3;
+    }
+
+    @keyframes sparkleFade {
+      0% { transform: scale(1); opacity: 1; }
+      100% { transform: scale(0.5); opacity: 0; }
+    }
   </style>
 </head>
 <body>
@@ -156,7 +179,7 @@
     </div>
 
     <p>
-      Happy Birthday to the most incredible woman I’ve ever known. On this special day, I just want to tell you how deeply grateful I am to be your child. You’ve been my first friend, my forever teacher, and my greatest support—even when I didn’t know I needed it.No words will ever truly capture how much you mean to me, but I hope today brings you a piece of the happiness you’ve given me every single day of my life.
+      Happy Birthday to the most incredible woman I’ve ever known. On this special day, I just want to tell you how deeply grateful I am to be your child. You’ve been my first friend, my forever teacher, and my greatest support—even when I didn’t know I needed it.
     </p>
 
     <button onclick="playMessage()">Play Me</button>
@@ -181,17 +204,18 @@
       bgm.play();
     });
 
-    // Image carousel
+    // Image carousel with smooth transition
     const imageList = ["amma.jpg", "pic2.jpg", "pic3.jpg", "pic4.jpg", "pic5.jpg"];
     let currentIndex = 0;
 
     function changeImage(direction) {
       const img = document.getElementById("carousel-image");
-      img.style.opacity = 0;
+      img.classList.add("fade-out");
+
       setTimeout(() => {
         currentIndex = (currentIndex + direction + imageList.length) % imageList.length;
-        img.src = imageList[currentIndex];
-        img.style.opacity = 1;
+        img.onload = () => img.classList.remove("fade-out");
+        img.src = imageList[currentIndex] + `?v=${Date.now()}`; // Cache bust
       }, 300);
     }
 
@@ -271,13 +295,26 @@
       heart.style.left = Math.random() * 100 + "vw";
       heart.style.fontSize = Math.random() * 15 + 15 + "px";
       document.body.appendChild(heart);
-
       setTimeout(() => heart.remove(), 6000);
     }
 
     setInterval(() => {
-      if (Math.random() < 0.4) spawnHeart(); // control density
+      if (Math.random() < 0.4) spawnHeart();
     }, 600);
+
+    // Subtle sparkles
+    function spawnSparkle() {
+      const sparkle = document.createElement("div");
+      sparkle.className = "sparkle";
+      sparkle.style.left = Math.random() * 100 + "vw";
+      sparkle.style.top = Math.random() * 100 + "vh";
+      document.body.appendChild(sparkle);
+      setTimeout(() => sparkle.remove(), 2000);
+    }
+
+    setInterval(() => {
+      if (Math.random() < 0.2) spawnSparkle();
+    }, 500);
   </script>
 </body>
 </html>
