--- a/index.html
+++ b/index.html
@@ -39,21 +39,26 @@
       position: relative;
       display: inline-block;
       max-width: 90vw;
+      overflow: hidden;
+      height: auto;
+      max-height: 320px;
+      border-radius: 20px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
     }
 
-    #carousel-image {
+    #carousel-container {
+      display: flex;
+      transition: transform 0.6s ease;
+      will-change: transform;
+    }
+
+    #carousel-container img {
       width: 100%;
       max-width: 300px;
       height: auto;
       border-radius: 20px;
-      margin-top: 20px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-      transition: opacity 0.6s ease;
-      opacity: 1;
-    }
-
-    .fade-out {
-      opacity: 0 !important;
+      flex-shrink: 0;
+      user-select: none;
     }
 
     .arrow {
@@ -69,6 +74,7 @@
       box-shadow: 0 4px 8px rgba(0,0,0,0.3);
       user-select: none;
       z-index: 10;
+      user-select: none;
     }
 
     .arrow.left { left: -12%; }
@@ -77,7 +83,12 @@
     @media (max-width: 600px) {
       .arrow.left { left: -8vw; }
       .arrow.right { right: -8vw; }
-      #carousel-image { max-width: 85vw; }
+      .image-wrapper {
+        max-height: none;
+      }
+      #carousel-container img {
+        max-width: 85vw;
+      }
     }
 
     button {
@@ -146,24 +157,6 @@
       from { opacity: 0; transform: translateY(-20px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
-    /* Sparkles */
-    .sparkle {
-      position: fixed;
-      width: 8px;
-      height: 8px;
-      background: radial-gradient(white, transparent);
-      border-radius: 50%;
-      opacity: 0.8;
-      pointer-events: none;
-      animation: sparkleFade 2s linear forwards;
-      z-index: 3;
-    }
-
-    @keyframes sparkleFade {
-      0% { transform: scale(1); opacity: 1; }
-      100% { transform: scale(0.5); opacity: 0; }
-    }
   </style>
 </head>
 <body>
@@ -174,12 +167,18 @@
 
     <div class="image-wrapper">
       <div class="arrow left" onclick="changeImage(-1)">❮</div>
-      <img id="carousel-image" src="amma.jpg" alt="My Amma">
+      <div id="carousel-container">
+        <img src="amma.jpg" alt="My Amma" />
+        <img src="pic2.jpg" alt="Pic 2" />
+        <img src="pic3.jpg" alt="Pic 3" />
+        <img src="pic4.jpg" alt="Pic 4" />
+        <img src="pic5.jpg" alt="Pic 5" />
+      </div>
       <div class="arrow right" onclick="changeImage(1)">❯</div>
     </div>
 
     <p>
-      Happy Birthday to the most incredible woman I’ve ever known. On this special day, I just want to tell you how deeply grateful I am to be your child. You’ve been my first friend, my forever teacher, and my greatest support—even when I didn’t know I needed it.
+      Happy Birthday to the most incredible woman I’ve ever known. On this special day, I just want to tell you how deeply grateful I am to be your child. You’ve been my first friend, my forever teacher, and my greatest support—even when I didn’t know I needed it.No words will ever truly capture how much you mean to me, but I hope today brings you a piece of the happiness you’ve given me every single day of my life.
     </p>
 
     <button onclick="playMessage()">Play Me</button>
@@ -204,19 +203,15 @@
       bgm.play();
     });
 
-    // Image carousel with smooth transition
-    const imageList = ["amma.jpg", "pic2.jpg", "pic3.jpg", "pic4.jpg", "pic5.jpg"];
+    // Image carousel sliding
+    const carousel = document.getElementById("carousel-container");
+    const totalImages = carousel.children.length;
     let currentIndex = 0;
 
     function changeImage(direction) {
-      const img = document.getElementById("carousel-image");
-      img.classList.add("fade-out");
-
-      setTimeout(() => {
-        currentIndex = (currentIndex + direction + imageList.length) % imageList.length;
-        img.onload = () => img.classList.remove("fade-out");
-        img.src = imageList[currentIndex] + `?v=${Date.now()}`; // Cache bust
-      }, 300);
+      currentIndex = (currentIndex + direction + totalImages) % totalImages;
+      const offset = -currentIndex * 300; // 300px image width
+      carousel.style.transform = `translateX(${offset}px)`;
     }
 
     // Confetti
@@ -237,7 +232,7 @@
         confetti.push({
           x: Math.random() * canvas.width,
           y: Math.random() * canvas.height - canvas.height,
-          r: Math.random() * 6 + 4,
+          r: Math.random() * 8 + 6,
           d: Math.random() * 5 + 2,
           color: `hsl(${Math.random() * 360}, 100%, 70%)`,
           tilt: Math.random() * 10 - 10,
@@ -248,15 +243,36 @@
       }
     }
 
+    // Star shape drawing for confetti
+    function drawStar(x, y, r, color) {
+      const spikes = 5;
+      const step = Math.PI / spikes;
+      let rot = Math.PI / 2 * 3;
+      let cx = x;
+      let cy = y;
+
+      ctx.beginPath();
+      ctx.moveTo(cx, cy - r);
+      for (let i = 0; i < spikes; i++) {
+        let x1 = cx + Math.cos(rot) * r;
+        let y1 = cy + Math.sin(rot) * r;
+        ctx.lineTo(x1, y1);
+        rot += step;
+
+        x1 = cx + Math.cos(rot) * (r / 2);
+        y1 = cy + Math.sin(rot) * (r / 2);
+        ctx.lineTo(x1, y1);
+        rot += step;
+      }
+      ctx.closePath();
+      ctx.fillStyle = color;
+      ctx.fill();
+    }
+
     function drawConfetti() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       confetti.forEach((c) => {
-        ctx.beginPath();
-        ctx.lineWidth = c.r;
-        ctx.strokeStyle = c.color;
-        ctx.moveTo(c.x + c.tilt + c.r / 2, c.y);
-        ctx.lineTo(c.x + c.tilt, c.y + c.tilt + c.r / 2);
-        ctx.stroke();
+        drawStar(c.x + c.tilt, c.y, c.r, c.color);
       });
       updateConfetti();
     }
@@ -282,9 +298,10 @@
     }
 
     function triggerConfetti() {
-      generateConfetti(65);
+      generateConfetti(40); // slightly fewer, bigger stars
       confettiRunning = true;
       animateConfetti();
+      setTimeout(() => confettiRunning = false, 5000); // stop confetti after 5s
     }
 
     // Floating hearts (less)
@@ -295,26 +312,13 @@
       heart.style.left = Math.random() * 100 + "vw";
       heart.style.fontSize = Math.random() * 15 + 15 + "px";
       document.body.appendChild(heart);
+
       setTimeout(() => heart.remove(), 6000);
     }
 
     setInterval(() => {
-      if (Math.random() < 0.4) spawnHeart();
+      if (Math.random() < 0.4) spawnHeart(); // control density
     }, 600);
-
-    // Subtle sparkles
-    function spawnSparkle() {
-      const sparkle = document.createElement("div");
-      sparkle.className = "sparkle";
-      sparkle.style.left = Math.random() * 100 + "vw";
-      sparkle.style.top = Math.random() * 100 + "vh";
-      document.body.appendChild(sparkle);
-      setTimeout(() => sparkle.remove(), 2000);
-    }
-
-    setInterval(() => {
-      if (Math.random() < 0.2) spawnSparkle();
-    }, 500);
   </script>
 </body>
 </html>
